name:                ureader
version:             0.0.0.0
license:             BSD3
license-file:        LICENSE
author:              Sam T.
maintainer:          Sam T. <pxqr.sta@gmail.com>
copyright:           (c) 2013, Sam T.
category:            RSS
build-type:          Simple
cabal-version:       >= 1.10
tested-with:         GHC == 7.6.3
homepage:            https://github.com/pxqr/ureader
bug-reports:         https://github.com/pxqr/ureader/issues
synopsis:            Minimalistic CLI RSS reader.
-- description:

source-repository head
  type:                git
  location:            git://github.com/pxqr/ureader.git

executable ureader
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , PatternGuards
                     , RecordWildCards
                     , ViewPatterns
                     , BangPatterns

                     , FlexibleInstances
                     , FlexibleContexts
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       UReader
                       UReader.Localization
                       UReader.Options
                       UReader.RSS

  build-depends:       base       == 4.6.*
                     , implicit-params

                     , parallel-io

                     , bytestring == 0.10.*
                     , text       == 0.11.*
                     , containers
                     , split

                     , time
                     , old-locale

                     , network == 2.4.*
                     , HTTP    == 4000.2.*

                     , directory
                     , filepath
                     , ansi-wl-pprint       == 0.6.*
                     , optparse-applicative == 0.5.*
                     , terminal-size

                     , xml     == 1.3.*
                     , feed    == 0.3.*
                     , tagsoup == 0.12.*

  ghc-options:       -Wall -O2